[SYNCOPE-1410] Empower SpringBoot's capabilities to configure actual implementations on IdRepo / IdM Console variants