@@ -18,7 +18,6 @@
  */
 package org.apache.syncope.client.console.panels.search;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
@@ -81,7 +80,7 @@ public class ConnObjectSearchPanel extends AbstractSearchPanel {
 
             @Override
             protected List<SearchClause.Type> load() {
-                return Collections.singletonList(SearchClause.Type.ATTRIBUTE);
+                return List.of(SearchClause.Type.ATTRIBUTE);
             }
         };
 
@@ -91,7 +90,7 @@ public class ConnObjectSearchPanel extends AbstractSearchPanel {
 
             @Override
             protected List<String> load() {
-                return Collections.emptyList();
+                return List.of();
             }
         };
 
